# cms-pkcs7-parser

./: Cargo.toml  README.md
src/: lib.rs
src/pkcs7/: decoding.rs  loader.rs  mod.rs  types.rs
tests/: pkcs7_tests.rs
tests/test_files/: ecdsa_100KB.p7m  ecdsa_100KB.pem  ecdsa_10KB.p7m  ecdsa_10KB.pem  ecdsa_1KB.p7m  ecdsa_1KB.pem  ecdsa_1MB.p7m  ecdsa_1MB.pem  rsa_100KB.p7m  rsa_100KB.pem  rsa_10KB.p7m  rsa_10KB.pem  rsa_1KB.p7m  rsa_1KB.pem  rsa_1MB.p7m  rsa_1MB.pem
