[package]
name = "cms-pkcs7-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "cms-pkcs7-parser"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bcder = "0.7.4"
pem = "3.0.5"
hex = "0.4.3"
chrono = "0.4.38"
serde = {version = "1.0", features = ["derive"]}
base64 = "0.22"
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
temp-dir = "0.1"   # For handling test files
anyhow = "1.0"     # Error handling
colored = "2.0" 
memory-stats = "1.0"
tempfile = "3.5"
base64 = "0.22.1"
